-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 16
-
Component/s: client-libs
-
b08
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8277561 | 15.0.6 | Dmitry Cherepanov | P4 | Resolved | Fixed | b03 |
| JDK-8278502 | 13.0.10 | Olga Mikhaltcova | P4 | Resolved | Fixed | b04 |
| JDK-8251847 | 11.0.10-oracle | Philip Race | P4 | Resolved | Fixed | b01 |
| JDK-8253487 | 11.0.10 | Philip Race | P4 | Resolved | Fixed | b01 |
Mainly this was done because there was no need for it to be separate
since at the time there were next to no distros with a stable API version
of libharfbuzz which met JDK's requirements.
This is no longer the case so we can begin the process of allowing
for a system libharfbuzz to be used by having a standalone libharfbuzz bundled with JDK.
- backported by
-
JDK-8251847 Separate libharfbuzz from libfontmanager
-
- Resolved
-
-
JDK-8253487 Separate libharfbuzz from libfontmanager
-
- Resolved
-
-
JDK-8277561 Separate libharfbuzz from libfontmanager
-
- Resolved
-
-
JDK-8278502 Separate libharfbuzz from libfontmanager
-
- Resolved
-
- relates to
-
JDK-8250605 Linux x86_32 builds fail after JDK-8249821
-
- Resolved
-
-
JDK-8256557 libharfbuzz fails to link on gcc 4.4.x due to -Wl,-z,defs
-
- Resolved
-
-
JDK-8250894 Provide a configure option to build and run against the platform libharfbuzz
-
- Resolved
-
-
JDK-8255790 GTKL&F: Java 16 crashes on initialising GTKL&F on Manjaro Linux
-
- Closed
-
- links to
-
Commit
openjdk/jdk13u-dev/ee326256
-
Commit
openjdk/jdk15u-dev/5bc3e18a
-
Review
openjdk/jdk13u-dev/301
-
Review
openjdk/jdk15u-dev/138