8249821: Separate libharfbuzz from libfontmanager

Reviewed-by: erikj